k8s/pix/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: pix-deployment
  namespace: pix
  labels:
    app: pix
spec:
  revisionHistoryLimit: 0
  replicas: 1
  selector:
    matchLabels:
      app: pix
  template:
    metadata:
      labels:
        app: pix
    spec:
      containers:
        - name: pix
          image: ghcr.io/therayquaza/home-cluster/pix:v0.1.4@sha256:887c2e4e1b5084e8fe9bc89b47407f35819afb8ea8637800fd31559801f865a1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 65534
            seccompProfile:
              type: RuntimeDefault
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "100m"
      # imagePullSecrets:
      #   - name: ghcr
