k8s/pix/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: pix-service
  namespace: pix
  labels:
    app: pix
spec:
  type: ClusterIP
  selector:
    app: pix
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
