k8s/pix/route.yaml

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pix-route
  namespace: pix
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: private-gateway
      namespace: default
      sectionName: pix-https
  hostnames:
    - pix.internal.rayq.app
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
      - group: ''
        kind: Service
        name: pix-service
        port: 8080
        weight: 1
